[project]
name = "openenv-email-triage"
version = "0.1.0"
description = "OpenEnv Email Triage"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.1.13"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["openenv_email_triage"]
