[project]
name = "openenv-email-triage"
version = "0.1.0"
description = "OpenEnv Email Triage"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openenv_email_triage*", "server*"]
